Bug 730831 - Use extended ISO-8601 year format in Date#toISOString if necessary. r=jorendorff